# cloud-init

./: .gitignore  .gitreview  .testr.conf  HACKING.rst  LICENSE  MANIFEST.in  README  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cloudinit/: exceptions.py  flows.py  logging.py  plugin_finder.py  registry.py  reporting.py  safeyaml.py  settings.py  shell.py  templater.py  test.py  url_helper.py  util.py  version.py
cloudinit/config/: __init__.py
cloudinit/distros/: __init__.py  arch.py  debian.py  freebsd.py  gentoo.py  rhel.py  sles.py
cloudinit/osys/: base.py  general.py  network.py  users.py
cloudinit/osys/windows/: base.py  general.py  network.py
cloudinit/osys/windows/util/: ws2_32.py  (+2 more)
cloudinit/reporting/: __init__.py  handlers.py
cloudinit/sources/: DataSourceConfigDrive.py  __init__.py  base.py  baseopenstack.py  httpopenstack.py  strategy.py
cloudinit/sources/helpers/: openstack.py
cloudinit/sources/openstack/: base.py  configdrive.py  httpopenstack.py
cloudinit/tests/: __init__.py  test_main.py  test_plugin_finder.py  test_registry.py  test_reporting.py  test_safeyaml.py  test_shell.py  test_templating.py  test_url_helper.py  util.py
cloudinit/tests/osys/: test_base.py
cloudinit/tests/sources/: test_base.py  test_strategy.py
cloudinit/utils/: __init__.py  network.py
doc/source/: api.rst  conf.py  contents.rst
doc/source/api/: README
inits/sysvinit/redhat/: cloud-config  cloud-final  cloud-init  cloud-init-local
misc/: pip2distro.txt
specs/: parallel.rst
tools/: noproxy  tox-venv
(+7 files in other folders)
