[metadata]
name = cloudinit
version = 1.9.0
summary = cloud initialisation magic
description-file =
  README.rst
author = Scott Moser
author-email = scott.moser@canonical.com
home-page = http://launchpad.net/cloud-init/
classifier =
  Environment :: Console
  Environment :: Cloud
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: dual GPLv3 or Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3

[files]
packages =
  cloudinit

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
  cloud-init = cloudinit.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
